--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
 // --- GLOBAL STATE & CONFIG ---
 let transactionsData = [];
 let budgetsData = [];
-const API_BASE_URL = 'http://localhost:3000/api';
+//const API_BASE_URL = 'http://localhost:3000/api';
+const API_BASE_URL = '/api';
 const state = { token: null, userEmail: null, fullName: null, activePeriod: 'monthly' };
 let myBarChart, myDashboardPieChart, myReportPieChart, myReportTrendChart;
 
