--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinWiz - Secure Financial Tracker</title>
+    <title>FinViz - Secure Financial Tracker</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -35,13 +35,7 @@
 
     <div id="auth-view" class="view">
         <header class="flex items-center justify-between whitespace-nowrap border-b bg-white px-4 sm:px-10 py-4">
-            <div class="flex items-center gap-3 text-gray-800"><div class="w-8 h-8 text-[var(--primary-600)]">
-                <svg fill="currentColor" viewBox="0 0 48 48">
-                    <path d="M24 4C25.7818 14.2173 33.7827 22.2182 44 24C33.7827 25.7818 25.7818 33.7827 24 44C22.2182 33.7827 14.2173 25.7818 4 24C14.2173 22.2182 22.2182 14.2173 24 4Z"></path>
-                </svg>
-            </div>
-            <!-- <img src="logo.png" alt="Your Company Logo" class="w-8 h-8"> -->
-            <h2 class="text-gray-900 text-xl font-bold tracking-tight">FinWiz</h2></div>
+            <div class="flex items-center gap-3 text-gray-800"><div class="w-8 h-8 text-[var(--primary-600)]"><svg fill="currentColor" viewBox="0 0 48 48"><path d="M24 4C25.7818 14.2173 33.7827 22.2182 44 24C33.7827 25.7818 25.7818 33.7827 24 44C22.2182 33.7827 14.2173 25.7818 4 24C14.2173 22.2182 22.2182 14.2173 24 4Z"></path></svg></div><h2 class="text-gray-900 text-xl font-bold tracking-tight">FinViz</h2></div>
             <div class="flex items-center gap-4">
                 <a href="#" id="auth-view-signin-link" class="text-gray-600 hover:text-gray-900 text-base font-semibold">Log In</a>
                 <a href="#" id="auth-view-signup-link" class="flex min-w-[84px] cursor-pointer items-center justify-center rounded-lg h-10 px-5 bg-[var(--primary-600)] text-white text-base font-semibold shadow-sm hover:bg-[var(--primary-700)] transition-colors"><span class="truncate">Sign Up</span></a>
@@ -78,7 +72,7 @@
     <div id="app-view" class="view">
         <div class="relative flex size-full min-h-screen flex-col bg-white">
             <header class="flex items-center justify-between whitespace-nowrap border-b bg-white px-4 sm:px-10 py-4 shadow-sm">
-                <div class="flex items-center gap-3 text-gray-800"><div class="w-8 h-8 text-[var(--primary-600)]"><svg fill="currentColor" viewBox="0 0 48 48"><path d="M24 4C25.7818 14.2173 33.7827 22.2182 44 24C33.7827 25.7818 25.7818 33.7827 24 44C22.2182 33.7827 14.2173 25.7818 4 24C14.2173 22.2182 22.2182 14.2173 24 4Z"></path></svg></div><h2 class="text-gray-900 text-xl font-bold tracking-tight">FinWiz</h2></div>
+                <div class="flex items-center gap-3 text-gray-800"><div class="w-8 h-8 text-[var(--primary-600)]"><svg fill="currentColor" viewBox="0 0 48 48"><path d="M24 4C25.7818 14.2173 33.7827 22.2182 44 24C33.7827 25.7818 25.7818 33.7827 24 44C22.2182 33.7827 14.2173 25.7818 4 24C14.2173 22.2182 22.2182 14.2173 24 4Z"></path></svg></div><h2 class="text-gray-900 text-xl font-bold tracking-tight">FinViz</h2></div>
                 
                 <nav class="hidden md:flex items-center gap-8">
                     <a href="#" id="nav-dashboard" class="nav-link text-gray-600 hover:text-[var(--primary-600)] text-base font-medium transition-colors">Dashboard</a>
@@ -283,21 +277,21 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-6 h-6 text-[var(--primary-500)] mt-1 flex-shrink-0"><path d="M3 4a2 2 0 0 0-2 2v1.161l8.441 4.221a1.25 1.25 0 0 0 1.118 0L19 7.162V6a2 2 0 0 0-2-2H3Z" /><path d="M19 8.839l-7.77 3.885a2.75 2.75 0 0 1-2.46 0L1 8.839V14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.839Z" /></svg>
                                             <div>
                                                 <h3 class="font-semibold text-gray-800">Email</h3>
-                                                <p>gunjan.j0110@gmail.com</p>
+                                                <p>support@finviz.example</p>
                                             </div>
                                         </div>
                                         <div class="flex items-start gap-4">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-6 h-6 text-[var(--primary-500)] mt-1 flex-shrink-0"><path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 0 1 3.5 2h1.148a1.5 1.5 0 0 1 1.465 1.175l.716 3.223a1.5 1.5 0 0 1-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 0 0 6.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 0 1 1.767-1.052l3.223.716A1.5 1.5 0 0 1 18 15.352V16.5a1.5 1.5 0 0 1-1.5 1.5h-1.528a1.5 1.5 0 0 1-1.473-1.222l-.193-.58a10.024 10.024 0 0 1-3.829-3.829l-.58-.193A1.5 1.5 0 0 1 3.5 9.028V7.5a1.5 1.5 0 0 1 1.222-1.473l.58-.193a10.024 10.024 0 0 1 3.829-3.829l.193-.58A1.5 1.5 0 0 1 9.028 2H7.5A1.5 1.5 0 0 1 6 3.5v1.5H4.5a1.5 1.5 0 0 1-1.5-1.5V3.5Z" clip-rule="evenodd" /></svg>
                                             <div>
                                                 <h3 class="font-semibold text-gray-800">Phone</h3>
-                                                <p>+91 98293 07554</p>
+                                                <p>+91 98765 43210</p>
                                             </div>
                                         </div>
                                         <div class="flex items-start gap-4">
                                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-6 h-6 text-[var(--primary-500)] mt-1 flex-shrink-0"><path fill-rule="evenodd" d="m9.69 18.933.003.001a9.995 9.995 0 0 1 5.6-1.682 1 1 0 0 0 .44-.132l.006-.003.018-.008a5.741 5.741 0 0 0 2.828-3.875.997.997 0 0 0-.344-1.018l-1.058-.61a1 1 0 0 0-1.28.318l-.593.89a.996.996 0 0 1-1.282.261 9.99 9.99 0 0 0-4.322-4.322.996.996 0 0 1 .26-1.282l.89-.593a1 1 0 0 0 .318-1.28l-.61-1.058a.997.997 0 0 0-1.018-.344 5.741 5.741 0 0 0-3.875 2.828l-.008.018-.003.006a1 1 0 0 0-.132.44 9.995 9.995 0 0 1-1.682 5.6l.001.003a1 1 0 0 0 .883.978 10.015 10.015 0 0 0 5.432-1.635 1 1 0 0 0 .227-.11Z" clip-rule="evenodd" /></svg>
                                             <div>
                                                 <h3 class="font-semibold text-gray-800">Address</h3>
-                                                <p>FinWiz Towers, MI Road<br>Jaipur, Rajasthan, 302001<br>India</p>
+                                                <p>FinViz Towers, MI Road<br>Jaipur, Rajasthan, 302001<br>India</p>
                                             </div>
                                         </div>
                                     </div>
@@ -372,8 +366,7 @@
 // --- GLOBAL STATE & CONFIG ---
 let transactionsData = [];
 let budgetsData = [];
-//const API_BASE_URL = 'http://localhost:3000/api';
-const API_BASE_URL = '/api';
+const API_BASE_URL = 'http://localhost:3000/api';
 const state = { token: null, userEmail: null, fullName: null, activePeriod: 'monthly' };
 let myBarChart, myDashboardPieChart, myReportPieChart, myReportTrendChart;
 
@@ -534,17 +527,7 @@ const handleSignIn = async (e) => {
         initializeApp(); 
     } 
 };
-const handleSignUp = async (e) => { e.preventDefault(); 
-    displayFormError('signup', ''); 
-    const fullName = document.getElementById('signup-name').value; 
-    const email = document.getElementById('signup-email').value; 
-    const password = document.getElementById('signup-password').value; 
-    const confirmPassword = document.getElementById('signup-password-confirm').value; 
-    if (password !== confirmPassword) 
-    { displayFormError('signup', 'Passwords do not match.'); 
-    return; 
-}
-const data = await apiRequest('auth/signup', 'POST', { fullName, email, password, confirmPassword }); if (data.error) { displayFormError('signup', data.error); } else { alert(data.message); document.getElementById('signup-form').reset(); showAuthView('signin'); } };
+const handleSignUp = async (e) => { e.preventDefault(); displayFormError('signup', ''); const fullName = document.getElementById('signup-name').value; const email = document.getElementById('signup-email').value; const password = document.getElementById('signup-password').value; const confirmPassword = document.getElementById('signup-password-confirm').value; if (password !== confirmPassword) { displayFormError('signup', 'Passwords do not match.'); return; } const data = await apiRequest('auth/signup', 'POST', { fullName, email, password, confirmPassword }); if (data.error) { displayFormError('signup', data.error); } else { alert(data.message); document.getElementById('signup-form').reset(); showAuthView('signin'); } };
 const handleSignOut = () => { state.token = null; state.userEmail = null; state.fullName = null; localStorage.removeItem('authToken'); localStorage.removeItem('userEmail'); localStorage.removeItem('fullName'); showView('auth'); [myBarChart, myDashboardPieChart, myReportPieChart, myReportTrendChart].forEach(chart => chart?.destroy()); };
 const showAuthView = (view) => { document.getElementById('signin-form').reset(); document.getElementById('signup-form').reset(); displayFormError('signin', ''); displayFormError('signup', ''); document.getElementById('signin-form-container').classList.toggle('hidden', view !== 'signin'); document.getElementById('signup-form-container').classList.toggle('hidden', view === 'signin'); };
 
@@ -644,7 +627,7 @@ const updateReportSummaryTable = (sortedCategories, expenses) => { const summary
 const createPieChart = (canvasId, data, chartInstance, setChartInstance, showLegend = true) => { const canvas = document.getElementById(canvasId); if (!canvas) return; const ctx = canvas.getContext('2d'); if (chartInstance) chartInstance.destroy(); if (data.length > 0) { const newChart = new Chart(ctx, { type: 'pie', data: { labels: data.map(item => item[0]), datasets: [{ data: data.map(item => item[1]), backgroundColor: ['#3b82f6', '#ef4444', '#f97316', '#eab308', '#22c55e', '#14b8a6', '#8b5cf6', '#ec4899', '#6b7280'], hoverOffset: 4 }] }, options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: showLegend, position: 'bottom', labels: { padding: 15, boxWidth: 12 } } } } }); setChartInstance(newChart); } else { ctx.clearRect(0, 0, canvas.width, canvas.height); ctx.textAlign = 'center'; ctx.fillStyle = '#6b7280'; ctx.font = '14px Inter'; ctx.fillText('No expense data for this period.', canvas.width / 2, canvas.height / 2); } };
 
 // --- DOWNLOAD HANDLERS ---
-const handleDownloadCSV = () => { showLoader(true); const { startDate, endDate } = getDateRangeForPeriod(document.getElementById('report-period-select').value, document.getElementById('report-start-date').value, document.getElementById('report-end-date').value); const transactionsToExport = getTransactionsInDateRange(startDate, endDate); const headers = ['Date', 'Description', 'Category', 'Type', 'Amount']; const csvRows = [headers.join(',')]; const escapeCsvCell = (cell) => { const strCell = String(cell == null ? '' : cell); if (strCell.includes(',')) { return `"${strCell.replace(/"/g, '""')}"`; } return strCell; }; for (const t of transactionsToExport) { const row = [ new Date(t.date).toLocaleDateString(), escapeCsvCell(t.description), escapeCsvCell(t.category), t.type, t.amount ]; csvRows.push(row.join(',')); } const blob = new Blob([csvRows.join('\n')], { type: 'text/csv;charset=utf-8;' }); const link = document.createElement('a'); const url = URL.createObjectURL(blob); link.setAttribute('href', url); link.setAttribute('download', `FinWiz_Report_${new Date().toISOString().split('T')[0]}.csv`); link.style.visibility = 'hidden'; document.body.appendChild(link); link.click(); document.body.removeChild(link); showLoader(false); };
+const handleDownloadCSV = () => { showLoader(true); const { startDate, endDate } = getDateRangeForPeriod(document.getElementById('report-period-select').value, document.getElementById('report-start-date').value, document.getElementById('report-end-date').value); const transactionsToExport = getTransactionsInDateRange(startDate, endDate); const headers = ['Date', 'Description', 'Category', 'Type', 'Amount']; const csvRows = [headers.join(',')]; const escapeCsvCell = (cell) => { const strCell = String(cell == null ? '' : cell); if (strCell.includes(',')) { return `"${strCell.replace(/"/g, '""')}"`; } return strCell; }; for (const t of transactionsToExport) { const row = [ new Date(t.date).toLocaleDateString(), escapeCsvCell(t.description), escapeCsvCell(t.category), t.type, t.amount ]; csvRows.push(row.join(',')); } const blob = new Blob([csvRows.join('\n')], { type: 'text/csv;charset=utf-8;' }); const link = document.createElement('a'); const url = URL.createObjectURL(blob); link.setAttribute('href', url); link.setAttribute('download', `FinViz_Report_${new Date().toISOString().split('T')[0]}.csv`); link.style.visibility = 'hidden'; document.body.appendChild(link); link.click(); document.body.removeChild(link); showLoader(false); };
 const handleDownloadPDF = async () => {
     showLoader(true);
     const { jsPDF } = window.jspdf;
@@ -663,7 +646,7 @@ const handleDownloadPDF = async () => {
         doc.setFontSize(18);
         doc.setFont('helvetica', 'bold');
         doc.setTextColor(primaryColor);
-        doc.text('FinWiz Financial Report', pageMargin, 20);
+        doc.text('FinViz Financial Report', pageMargin, 20);
         doc.setFontSize(10);
         doc.setFont('helvetica', 'normal');
         doc.setTextColor(lightTextColor);
@@ -812,7 +795,7 @@ const handleDownloadPDF = async () => {
     }
 
     addFooter(1);
-    doc.save(`FinWiz_Report_${new Date().toISOString().split('T')[0]}.pdf`);
+    doc.save(`FinViz_Report_${new Date().toISOString().split('T')[0]}.pdf`);
     showLoader(false);
 };
 // --- MODAL & FORM HANDLERS & CRUD ---
