--- a/public/index.html
+++ b/public/index.html
@@ -366,7 +366,8 @@
 // --- GLOBAL STATE & CONFIG ---
 let transactionsData = [];
 let budgetsData = [];
-const API_BASE_URL = 'http://localhost:3000/api';
+// const API_BASE_URL = 'http://localhost:3000/api';
+const API_BASE_URL = '/api';
 const state = { token: null, userEmail: null, fullName: null, activePeriod: 'monthly' };
 let myBarChart, myDashboardPieChart, myReportPieChart, myReportTrendChart;
 
@@ -442,30 +443,7 @@ const showConfirmModal = (title, text, confirmStyle = 'danger') => {
 
 // --- API & UTILITY FUNCTIONS ---
 const formatCurrency = (amount) => new Intl.NumberFormat('en-IN', { style: 'currency', currency: 'INR' }).format(amount);
-// const apiRequest = async (endpoint, method = 'GET', body = null) => {
-//     showLoader(true);
-//     try {
-//         const headers = { 'Content-Type': 'application/json' };
-//         if (state.token) headers['Authorization'] = `Bearer ${state.token}`;
-//         const options = { method, headers };
-//         if (body) options.body = JSON.stringify(body);
-//         const response = await fetch(`${API_BASE_URL}/${endpoint}`, options);
-//         if (response.status === 204) return null;
-//         const data = await response.json();
-//         if (!response.ok) {
-//             const error = new Error(data.message || 'An API error occurred');
-//             error.status = response.status;
-//             throw error;
-//         }
-//         return data;
-//     } catch (error) {
-//         console.error(`API Error on ${method} ${endpoint}:`, error);
-//         if (error.message && error.message.toLowerCase().includes('token')) handleSignOut();
-//         return { error: error.message, status: error.status };
-//     } finally {
-//         showLoader(false);
-//     }
-// };
+
 const apiRequest = async (endpoint, method = 'GET', body = null) => {
     showLoader(true);
     try {
