--- a/public/index.html
+++ b/public/index.html
@@ -277,14 +277,14 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-6 h-6 text-[var(--primary-500)] mt-1 flex-shrink-0"><path d="M3 4a2 2 0 0 0-2 2v1.161l8.441 4.221a1.25 1.25 0 0 0 1.118 0L19 7.162V6a2 2 0 0 0-2-2H3Z" /><path d="M19 8.839l-7.77 3.885a2.75 2.75 0 0 1-2.46 0L1 8.839V14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.839Z" /></svg>
                                             <div>
                                                 <h3 class="font-semibold text-gray-800">Email</h3>
-                                                <p>support@finviz.example</p>
+                                                <p>gunjan.j0110@gmail.com</p>
                                             </div>
                                         </div>
                                         <div class="flex items-start gap-4">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-6 h-6 text-[var(--primary-500)] mt-1 flex-shrink-0"><path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 0 1 3.5 2h1.148a1.5 1.5 0 0 1 1.465 1.175l.716 3.223a1.5 1.5 0 0 1-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 0 0 6.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 0 1 1.767-1.052l3.223.716A1.5 1.5 0 0 1 18 15.352V16.5a1.5 1.5 0 0 1-1.5 1.5h-1.528a1.5 1.5 0 0 1-1.473-1.222l-.193-.58a10.024 10.024 0 0 1-3.829-3.829l-.58-.193A1.5 1.5 0 0 1 3.5 9.028V7.5a1.5 1.5 0 0 1 1.222-1.473l.58-.193a10.024 10.024 0 0 1 3.829-3.829l.193-.58A1.5 1.5 0 0 1 9.028 2H7.5A1.5 1.5 0 0 1 6 3.5v1.5H4.5a1.5 1.5 0 0 1-1.5-1.5V3.5Z" clip-rule="evenodd" /></svg>
                                             <div>
                                                 <h3 class="font-semibold text-gray-800">Phone</h3>
-                                                <p>+91 98765 43210</p>
+                                                <p>+91 98293 07554</p>
                                             </div>
                                         </div>
                                         <div class="flex items-start gap-4">
